code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Jun-2010 Jean-Marie Simonet
$ Normalizing Cpanel link in all admin error.php
# Reverting part of new bluestork error.php [Revision 17643] as it breaks error display.
# [#20992] [patch] Toolbar may generate code that is not well formed. Thanks Rouven.

12-Jun-2010 Mark Dexter
# Fix asset table problems in sample data (Elin Waring)

12-Jun-2010 Ron Severdia
# Fixed category header (Thanks Babs Gosgens)
^ Fixed weblinks header icon (Thanks Tim Plummer)
^ Move language dropdown to panel (Thanks Tim Plummer)
^ [#20618] Fixed IE login bug 
# Fixed modal widths (contents still need love)
# [#20640] Fixed favicon MIME type (Thanks Rouven Wesling)
^ Changed order icon to bg CSS and added inactive state
# Fixed required indicator on IE
^ Changed layout to 60/40 on edit banner client & edit contact
- Removed deprecated IE6 stylesheet
# Fixed language screen filter
+ Fixed BlueStork error.php page

12-Jun-2010 Jean-Marie Simonet
# [#20980] [patch] Hathor patches to Newsfeed Modal. Thanks Andrea.
$# Added a bunch of missing strings values, corrected some keys (Thanks Stella), added sticky field in banner parameters.
# [#20579] Time Change for Server/User does not update. Thanks Christophe.
# [#20648] mod_wrapper: error on getting params. Thanks Riccardo and Elin.
# [#20782] Username Reminder Request Incorrect. Thanks Airton.
# [#20983] Issue with linking articles that have apostrophe in them. Thanks Christophe.
#$ Missing string/change key
$ [#20990] Remove excess JLIB_FORM_CHANGE_USER definition. Thanks Michael.

11-Jun-2010 Christophe Demko
 # Fixed issue [#20867] [Patch] Changes to Hathor to mirror changes in core admin layouts (Andrea Tarr)
 # Fixed issue [#20968] Fix Category Parameters in Featured Menu Item (Mark Dexter, bill richardson)
 # Fixed issues in the component installer and in com_alpha component

11-Jun-2010 Jean-Marie Simonet