@@ -64,7 +64,7 @@ JHtml::_('behavior.formvalidation');
 <div class="width-40 fltrt">
 	<?php echo JHtml::_('sliders.start','banner-client-sliders-'.$this->item->id, array('useCookie'=>1)); ?>
 
-	<?php echo JHtml::_('sliders.panel',JText::_('COM_BANNERS_GROUP_LABEL_METADATA_OPTIONS'), 'publishing-details'); ?>
+	<?php echo JHtml::_('sliders.panel',JText::_('JGLOBAL_FIELDSET_METADATA_OPTIONS'), 'publishing-details'); ?>
 		<fieldset class="adminform">
 		<ul class="adminformlist">
 			<?php foreach($this->form->getFieldset('metadata') as $field): ?>
