@@ -127,7 +127,6 @@ COM_BANNERS_FIELD_VALUE_USECOMPONENTDEFAULT="-- Use Component Default --"
 COM_BANNERS_FIELD_WIDTH_LABEL="Width (px)"
 COM_BANNERS_FIELD_WIDTH_DESC="The width of the banner"
 COM_BANNERS_FILENAME="%1$s-banners-tracks-%2$s"
-COM_BANNERS_GROUP_LABEL_METADATA_OPTIONS="Metadata Options"
 COM_BANNERS_GROUP_LABEL_PUBLISHING_DETAILS="Publishing Options"
 COM_BANNERS_HEADING_ACTIVE="Active"
 COM_BANNERS_HEADING_CLICKS="Clicks"
