@@ -35,7 +35,6 @@ COM_CONTENT_FEATURED_CATEGORIES_DESC="Optional list of categories. If selected, 
 COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
 COM_CONTENT_FEATURED_ORDER="Featured Articles Order"
 COM_CONTENT_FEATURED_TITLE="Article Manager: Featured Articles"
-COM_CONTENT_FIELDSET_METADATA="Metadata Options"
 COM_CONTENT_FIELDSET_PUBLISHING="Publishing Options"
 COM_CONTENT_FIELDSET_RULES="Article Permissions"
 COM_CONTENT_FIELD_ARTICLETEXT_DESC="Enter the article content in the text-area"
