@@ -26,7 +26,6 @@ COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL="Title Native"
 COM_LANGUAGES_FILTER_LOCATION_LABEL="Filter Loction:"
 COM_LANGUAGES_FTP_DESC="For setting Languages as default, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
 COM_LANGUAGES_FTP_TITLE="FTP Login Details"
-COM_LANGUAGES_GROUP_LABEL_METADATA_OPTIONS="Metadata Options"
 COM_LANGUAGES_HEADING_AUTHOR_EMAIL="Author Email"
 COM_LANGUAGES_HEADING_DEFAULT="Default"
 COM_LANGUAGES_HEADING_LANG_CODE="Language Code"
