@@ -101,7 +101,6 @@ COM_MENUS_MENU_SAVE_SUCCESS="Menu successfully saved"
 COM_MENUS_MENU_SAVE_SUCCESS="Menu successfully saved"
 COM_MENUS_MENU_TITLE_DESC="The title of the menu to display in the Administrator Menubar and lists."
 COM_MENUS_MENU_TYPE_NOT_ALLOWED="This is a reserved menutype."
-COM_MENUS_METADATA_FIELDSET_LABEL="Metadata Options"
 ; in the following string
 ; %1$s is for module title, %2$s is for access-title, %3$s is for position
 COM_MENUS_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
