@@ -23,7 +23,6 @@ COM_CATEGORIES_FIELD_LANGUAGE_DESC="Assign a language to this category."
 COM_CATEGORIES_FIELD_PARENT_DESC="Parent Desc"
 COM_CATEGORIES_FIELD_PARENT_LABEL="Parent"
 COM_CATEGORIES_FIELDSET_DETAILS="Details"
-COM_CATEGORIES_FIELDSET_METADATA="Metadata Options"
 COM_CATEGORIES_FIELDSET_RULES="Category Access Rules"
 COM_CATEGORIES_ITEMS_SEARCH_FILTER="Search"
 COM_CATEGORIES_N_ITEMS_ARCHIVED="%d categories successfully archived"
