@@ -209,7 +209,6 @@ COM_CONTACT_FIELD_VALUE_SLIDERS="Sliders"
 COM_CONTACT_FIELD_VALUE_TABS="Tabs"
 COM_CONTACT_FIELDSET_CONTACTFORM_LABEL="Mail Options"
 COM_CONTACT_FIELDSET_CONTACT_LABEL="Contact Display Options"
-COM_CONTACT_FIELDSET_METADATA="Metadata Options"
 COM_CONTACT_FIELDSET_OPTIONS="Display Options"
 COM_CONTACT_FILTER_DESC="Choose the type of filter to display per default."
 COM_CONTACT_FILTER_LABEL="Filter field"
