@@ -250,7 +250,7 @@ JGLOBAL_FIELD_CATEGORIES_CHOOSE_CATEGORY_LABEL="Select a base category"
 JGLOBAL_FIELD_CATEGORIES_CHOOSE_CATEGORY_DESC="Categories that are within this category will be displayed"
 JGLOBAL_FIELD_CATEGORIES_DESC_DESC="If you enter some text in this field, it will override the Base Category Description."
 JGLOBAL_FIELD_CATEGORIES_DESC_LABEL="Base Category Description"
-JGLOBAL_FIELDSET_METADATA="Metadata"
+JGLOBAL_FIELDSET_METADATA_OPTIONS="Metadata Options"
 JGLOBAL_FIELDSET_PUBLISHING="Publishing Options"
 JGLOBAL_FIELDSET_OPTIONS="Options"
 JGLOBAL_FIELDSET_DISPLAY_OPTIONS="Display Options"
