@@ -85,9 +85,9 @@ JHtml::_('behavior.formvalidation');
 					<?php echo $this->form->getInput('rules'); ?>
 			</fieldset>
 
-			<?php echo JHtml::_('sliders.panel',JText::_('COM_CATEGORIES_FIELDSET_METADATA'), 'meta-options'); ?>
+			<?php echo JHtml::_('sliders.panel',JText::_('JGLOBAL_FIELDSET_METADATA_OPTIONS'), 'meta-options'); ?>
 			<fieldset class="panelform">
-				<legend class="element-invisible"><?php echo JText::_('COM_CATEGORIES_FIELDSET_METADATA'); ?></legend>
+				<legend class="element-invisible"><?php echo JText::_('JGLOBAL_FIELDSET_METADATA_OPTIONS'); ?></legend>
 				<?php echo $this->loadTemplate('metadata'); ?>
 			</fieldset>
 
